--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MyWebBlog": "Data Source=localhost,1433; Initial Catalog=razorweb; User ID=SA; Password=Password123; Encrypt=False"
+  },
+  "MailSettings": {
+    "Mail": "nguyenvyadoramy@gmail.com",
+    "DisplayName": "NguyenVy",
+    "Password": "ndic muyx jrue hprg",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
